--- a/jQuery/Test4.html
+++ b/jQuery/Test4.html
@@ -6,6 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <script src="./js/jquery-3.6.0.min.js"></script>
+  <style>
+    div {
+      width: 100px;
+      height: 100px;
+      background: greenyellow;
+    }
+  </style>
 </head>
 <body>
   <button id="btn1">显示</button>
@@ -15,15 +22,15 @@
   <script>
     $("#btn1").click(function(){
       // console.log(this);
-      $("div").show();
+      $("div").show(500);
     })
     $("#btn2").click(function(){
       // console.log(this);
-      $("div").hide();
+      $("div").hide(500);
     })
     $("#btn3").click(function(){
       // console.log(this);
-      $("div").toggle();
+      $("div").stop().toggle(500);
     })
   </script>
 </body>
